--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7"
-  },
+  "devDependencies": {},
   "dependencies": {
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
@@ -37,6 +34,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react-bootstrap": "^1.0.0",
-    "validator": "^13.0.0"
+    "validator": "^13.0.0",
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
   }
 }
