--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://localhost/DungeonDashDB
+MONGODB_URI=process.env.MONGODB_URI || mongodb+srv://jeqp:eU0Y9I2pEQCkfYVO@cluster0-2fjyo.mongodb.net/dungeon-dash?retryWrites=true&w=majority
